# time-shield-cpp

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CpuTickTimer_8hpp.html  CpuTickTimer_8hpp_source.html  DateTime_8hpp.html  DateTime_8hpp.js  DateTime_8hpp_source.html  DateTime_8mqh.html  DateTime_8mqh.js  DateTime_8mqh_source.html  DeadlineTimer_8hpp.html  DeadlineTimer_8hpp.js  DeadlineTimer_8hpp_source.html  Doxyfile  ElapsedTimer_8hpp.html  ElapsedTimer_8hpp.js  ElapsedTimer_8hpp_source.html  MoonPhase_8hpp.html  MoonPhase_8hpp.js  MoonPhase_8hpp_source.html  README-RU.md  README.md  README_8md.html  TimeShield_8mqh.html  TimeShield_8mqh.js  TimeShield_8mqh_source.html  TimerScheduler_8hpp.html  TimerScheduler_8hpp.js  TimerScheduler_8hpp_source.html  ZonedClock_8hpp.html  ZonedClock_8hpp.js  ZonedClock_8hpp_source.html  _formulas.tex  annotated.html  annotated_dup.js  astronomy__conversions_8hpp.html  (+626 more)
.github/doxygen-custom/: header.html
.github/workflows/: ci.yml  publish.yaml
MQL5/Include/: TimeShield.mqh  time_shield.mqh
MQL5/Include/time_shield/: DateTime.mqh  constants.mqh  date_struct.mqh  date_time_struct.mqh  enums.mqh  initialization.mqh  time_conversions.mqh  time_formatting.mqh  time_parser.mqh  time_struct.mqh  time_utils.mqh  time_zone_conversions.mqh  time_zone_struct.mqh  validation.mqh
MQL5/Scripts/time_shield/examples/: time_conversions_demo.mq5  time_formatting_demo.mq5  time_parser_demo.mq5
MQL5/Scripts/time_shield/tests/: test_eet_to_gmt.mq5  (+1 more)
agents/: commit-conventions.md  cpp-development-guidelines.md  header-implementation-guidelines-RU.md  header-implementation-guidelines.md  singleton-storage-guidelines-RU.md  singleton-storage-guidelines.md
cmake/: TimeShieldConfig.cmake.in  time-shield.pc.in  time_shield_cppConfig.cmake.in
docs/: groups.dox  groups_mql5.dox  header-implementation-guidelines-RU.md  header-implementation-guidelines.md  library-integration-guidelines-RU.md  library-integration-guidelines.md  mainpage.md  singleton-storage-guidelines-RU.md  singleton-storage-guidelines.md
docs/assets/archive/: README.md
examples/: date_time_example.cpp  ntp_client_example.cpp  ntp_time_service_example.cpp  time_conversions_example.cpp  time_formatting_example.cpp  time_formatting_showcase_example.cpp  time_parser_example.cpp  time_utils_example.cpp  time_zone_conversions_example.cpp
include/: time_shield.hpp
include/time_shield/: CpuTickTimer.hpp  DateTime.hpp  DeadlineTimer.hpp  ElapsedTimer.hpp  MoonPhase.hpp  TimerScheduler.hpp  ZonedClock.hpp  astronomy_conversions.hpp  config.hpp  constants.hpp  date_conversions.hpp  date_struct.hpp  date_time_conversions.hpp  date_time_struct.hpp  enums.hpp  initialization.hpp  iso_week_conversions.hpp  iso_week_struct.hpp  julian_conversions.hpp  ntp_client.hpp  ntp_client_pool.hpp  ntp_client_pool_runner.hpp  ntp_time_service.hpp  ole_automation_conversions.hpp  time_conversion_aliases.hpp  time_conversions.hpp  time_format_parser.hpp  time_formatting.hpp  time_parser.hpp  time_struct.hpp  time_unit_conversions.hpp  time_utils.hpp  time_zone_conversions.hpp  time_zone_offset.hpp  time_zone_offset_conversions.hpp  time_zone_struct.hpp  types.hpp  unix_time_conversions.hpp  validation.hpp  workday_conversions.hpp
include/time_shield/detail/: fast_date.hpp  floor_math.hpp  mul_hi.hpp
include/time_shield/ntp_client/: ntp_client_core.hpp  ntp_packet.hpp  udp_transport.hpp  udp_transport_posix.hpp  udp_transport_win.hpp  wsa_guard.hpp
include/time_shield_cpp/: time_shield.hpp
include/time_shield_cpp/parts/: config.hpp  constants.hpp  date_struct.hpp  date_time_struct.hpp  enums.hpp  time_conversions.hpp  time_formatting.hpp  time_parser.hpp  time_struct.hpp  time_utils.hpp  time_zone_struct.hpp  types.hpp  validation.hpp
include/time_shield_cpp/time_shield/: config.hpp  constants.hpp  date_struct.hpp  date_time_struct.hpp  enums.hpp  initialization.hpp  ntp_client.hpp  time_conversion_aliases.hpp  time_conversions.hpp  time_formatting.hpp  time_parser.hpp  time_utils.hpp  time_zone_conversions.hpp  time_zone_struct.hpp  types.hpp  validation.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2b.js  all_2c.js  all_2d.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  (+172 more)
tests/: astronomy_ole_conversions_test.cpp  date_time_test.cpp  deadline_elapsed_timer_test.cpp  gmt_time_zone_conversion_test.cpp  iso8601_negative_test.cpp  iso8601_round_trip_test.cpp  iso_week_date_test.cpp  julian_conversions_test.cpp  moon_phase_test.cpp  negative_time_boundaries_test.cpp  ntp_client_core_test.cpp  ntp_client_pool_runner_test.cpp  ntp_client_pool_template_test.cpp  ntp_client_pool_test.cpp  ntp_client_test.cpp  ntp_time_service_concurrency_test.cpp  ntp_time_service_late_teardown_test.cpp  ntp_time_service_test.cpp  parse_iso8601_test.cpp  test_fast_date64.cpp  test_ntp_client_protocol_validation.cpp  test_timestamp_ms_pre_epoch.cpp  test_year_boundaries_ms.cpp  time_boundaries_test.cpp  time_conversions_coverage_test.cpp  time_conversions_test.cpp  time_format_parser_test.cpp  time_formatting_test.cpp  time_parser_test.cpp  time_utils_test.cpp  time_zone_conversion_test.cpp  time_zone_conversions_us_test.cpp  time_zone_matrix_test.cpp  time_zone_name_parser_test.cpp  time_zone_struct_test.cpp  timeframe_parser_test.cpp  timer_scheduler_test.cpp  win_time_utils_test.cpp  workday_boundaries_test.cpp  workday_validation_test.cpp  (+2 more)
tests/install_consumer/: CMakeLists.txt  consumer.cpp
tests/odr/: CMakeLists.txt  a.cpp  b.cpp  cxx11_header_compat.cpp  ntp_time_service_a.cpp  ntp_time_service_b.cpp  ntp_time_service_dll_a.cpp  ntp_time_service_dll_b.cpp
tests/odr_mwe/: CMakeLists.txt  b.cpp
vcpkg-overlay/ports/time-shield-cpp/: portfile.cmake  vcpkg.json
(+1 files in other folders)
